# nomatica1

./: .env  .gitignore  README.md  app.js  app.set  build.sh  colorful-moves-data.jsonl  model-server-template.js  models.txt  multi-model-server.js  orchestrator.js  package-lock.json  package.json  proxy-server-template.js  pyproject.toml  run_all_models.sh  server.js  testEnv.js  tune.jsonl
cloudflare/: tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
css/: styles.css
nomatica1/: .gitattributes
public/: about.html  account.html  contact.html  explore.html  feedback.html  help.html  images.html  library.html  logout.html  notifications.html  privacy.html  profile.html  script.js  settings.html  styles.css  terms.html  videos.html
routes/: api.js  baichuan.js  bard.js  bloom.js  cerebras.js  chat.js  chatcode.js  chatglm.js  claude.js  claude2.js  codellama.js  deepseek.js  evolvemedium.js  explore.js  falcon.js  future1.js  futuremodel1.js  gemini.js  gemma.js  gpt35.js  gpt4.js  gptj.js  gptneox.js  grok.js  index.js  instructgpt.js  llama.js  llama3.js  mistral.js  mistral2.js  model21.js  model22.js  model23.js  model24.js  model25.js  model26.js  model27.js  model28.js  model29.js  model30.js  (+36 more)
services/: capsLogic.js
views/: 404.ejs  500.ejs  about.ejs  admin-portal.ejs  calendar.ejs  chat-model.ejs  contact.ejs  explore.ejs  faq.ejs  favorites.ejs  find-contracts.ejs  gemma-chat.ejs  help.ejs  images.ejs  index.ejs  layout.ejs  library.ejs  llama-chat.ejs  local-contractors.ejs  local-subcontractors.ejs  mistral-chat.ejs  model-list.ejs  terms.ejs  (+9 more)
(+55 files in other folders)
